kubernetes/java-servcie.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  selector: 
    app: java
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
