kubernetes/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service 
spec:
  selector: 
    app: nodejs
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
