kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000
      - path: /java/?(.*)
        pathType: Prefix
        backend:
          service:
            name: java-service
            port:
              number: 8080

      - path: /node/?(.*)
        pathType: Prefix
        backend:
          service:
            name: nodejs-service
            port:
              number: 3001
